fix(security): Mitigate SSRF in SiteCapturer
Patched a Server-Side Request Forgery (SSRF) vulnerability in the `SiteCapturer` class by implementing strict URL validation.

The `isHtml()` method, which makes a network connection, now explicitly a URI to validate that the URL protocol is either `http` or `https` before any connection is attempted. This prevents the use of other protocols such as `file://` or `ftp://`.

The `isSameHost()` helper method was strengthened to use `java.net.URI` for more reliable parsing instead of `java.net.URL`. It now correctly compares the scheme, host, and port (including default ports) to ensure that requests are only made to the intended source host.